tz-local/resource/argocd/ingress-argocd.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-argocd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#    nginx.ingress.kubernetes.io/rewrite-target: /
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/auth-type: basic
#    nginx.ingress.kubernetes.io/auth-secret: basic-auth-argocd
#    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - admin'
spec:
  rules:
  - host: argocd.eks_domain
    http:
      paths:
      - path: /
        backend:
          serviceName: argocd-server
          servicePort: 443
  - host: argocd.default.eks_project.eks_domain
    http:
      paths:
      - path: /
        backend:
          serviceName: argocd-server
          servicePort: 443
  tls:
    - hosts:
        - argocd.eks_domain
        - argocd.default.eks_project.eks_domain
      secretName: ingress-argocd-tls
