tz-local/resource/argocd/svc-argocd.yaml
#kind: Service
#apiVersion: v1
#metadata:
#  name: argocd-server
#  namespace: argocd
#  labels:
#    app.kubernetes.io/component: server
#    app.kubernetes.io/name: argocd-server
#    app.kubernetes.io/part-of: argocd
#spec:
#  ports:
#    - name: http
#      protocol: TCP
#      port: 80
#      targetPort: 80
#      nodePort: 30823
#    - name: https
#      protocol: TCP
#      port: 443
#      targetPort: 80
#      nodePort: 30822
#  selector:
#    app.kubernetes.io/name: argocd-server
#  clusterIP: 172.20.184.122
#  type: NodePort
#
#---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argocd-external
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
#    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
#    alb.ingress.kubernetes.io/actions.redirect-to-https: >
#        {"Type":"redirect","RedirectConfig":{"Port":"443","Protocol":"HTTPS","StatusCode":"HTTP_302"}}
#    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:AWS_REGION:aws_account_id:certificate/afdd3ce0-a1f4-4c6e-ac76-5ebfc820310a
spec:
  rules:
  - host: argocd.eks_domain
    http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: 443
        path: /*

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argocd-internal
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: argocd-server
              servicePort: 443

---
